# ccicpp

./: .gitignore  CMakeLists.txt  README.md  circle.yml  setup.sh
.circleci/: config.yml
HIDE.circleci/: config.yml
tests/: file_util.cc  test_dir_poll.cc
